updated scripts & menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5351 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -18,11 +18,11 @@ menuitem (_ "Quit")				"savequit"
 
 // Start maps.
 
-alias genmapitems [
+genmapitems = [
     alias n (listlen $arg1)
     loop i $n [
         alias listmapname (at $arg1 $i)
-        menuitemimage (concatword "packages/maps/official/preview/" $listmapname ".jpg") $listmapname (concat map $listmapname)
+		menuitemmapload $listmapname 
         alias next (+ $i 1)
         if (= $next $n) [ alias next 0 ] []
         alias nextmap (at $arg1 $next)
@@ -120,16 +120,23 @@ newmenu Credits
 
 menuitem "Project Leaders" -1
 menuitem "-----------------" -1
-menuitem "driAn				Lead coder, OpenAL, OpenGL, gameplay code." -1
-menuitem "makkE				Lead artist, models, skins, animations," -1
-menuitem "				mapping, 2D-art, textures, sounds." -1
+menuitem "Flowtron			Project leader, code, scripts, what needs to be done." -1
+menuitem "Brahma    		Coder, anti-cheat, analysis and community liason." -1
+menuitem "RandumKiwi			Mapping, documentation, tester, clean-up crew." -1
 menuitem "" -1
 menuitem "Active Developers/Contributors" -1
 menuitem "-----------------------------------" -1
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." -1
-menuitem "RandumKiwi			Mapping, documentation, tester, clean-up crew." -1
-menuitem "Flowtron			Universal team member, additional code, admin, community chief." -1
+menuitem "BCFH|Aerkefiende      Master of NSIS (Windows Installer)." -1
+menuitem "WahnFred              XCode Ninja (Mac Packaging)." -1
 menuitem "Toca				Mapmodels, sounds, textures, other stuff." -1
+menuitem "Mr.Floppy         Mapmodels, sounds, textures, other stuff." -1
+menuitem "" -1
+menuitem "Project Consultants" -1
+menuitem "-----------------------" -1
+menuitem "driAn				Code Guru, OpenAL, OpenGL, gameplay code." -1
+menuitem "makkE				Artwork Guru, models, skins, animations," -1
+menuitem "				mapping, 2D-art, textures, sounds." -1
 menuitem "" -1
 menuitem "Community Mappers" -1
 menuitem "-----------------------" -1
