--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -6,7 +6,7 @@ alias genbotmaps [
 	loop i (listlen $arg1) [
 		alias listmapname (at $arg1 $i)
 		alias menutext $listmapname (concat map $listmapname)
-		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
+		menuitemmapload $listmapname (concat tmp_botmap "=" $listmapname ";" startbotmap) 
 	]
 ]
 genbotmaps $defaultmaps
