--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -145,6 +145,7 @@ menuitemcheckbox "F6: Reverse the sort order:" "$serversortdir" "serversortdir $
 menuitemcheckbox "F7: Only show good servers:" "$showonlygoodservers" "showonlygoodservers $arg1"
 menuitemcheckbox "F8: Show minutes remaining:" "$showminremain" "showminremain $arg1"
 menuitemcheckbox "Sort official maps ontop:" "$serversortpreferofficial" "serversortpreferofficial $arg1"
+menuitemcheckbox "Use gamemode acronyms:" "$modeacronyms" "modeacronyms $arg1"
 menuitemslider "Favourites tag column:	" 0 2 "$serverbrowserhidefavtag" 1 [ "Show always" "Show when used" "Hide always"] "serverbrowserhidefavtag $arg1"
 menuitemslider "Server IP & port:		" 0 2 "$serverbrowserhideip" 1 [ "Show" "Show in grey" "Hide"] "serverbrowserhideip $arg1"
 menuitemslider "Sort servers by:		" 0 7 "$serversort" 1 [ "Ping" "Number of players" "Max players" "Minutes remaining" "Map name" "Gamemode" "IP address" "Server description"] "serversort $arg1"
