fix music-delay issues - see end of config/sounds.cfg for preload_music option
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5354 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -103,3 +103,7 @@ registersound "voicecom/niceshot"               // 87
 registermusic "pingpong/03-pp-kamikadze"        // M_FLAGGRAB
 registermusic "pingpong/08-pp-headshot"         // M_LASTMINUTE1
 registermusic "ac"                              // M_LASTMINUTE2
+
+preload_music = [ loop m 3 [ musicpreload $m ] ]
+// uncomment the line below if you want to preload the music (if you experience delay e.g. when picking up a flag)
+//preload_music
