--- a/ac/config/font.cfg
+++ b/ac/config/font.cfg
@@ -1,4 +1,112 @@
-font default "packages/misc/chars.png" 32 64 0 2 0 -2
+//font alx "packages/misc/ALX_chars.png" 32 80 0 2 0 -2
+font default "packages/misc/ALX_chars.png" 32 80 0 2 0 -2   //test font
+//font      name, tex, defaultw, defaulth, offsetx, offsety, offsetw, offseth
+//fontchar  x y w h
+fontchar 0   0   32  80 	//!
+fontchar 33  0   50  80 	//"
+fontchar 83  0   62  80 	//#
+fontchar 145 0   51  80 	//$
+fontchar 196 0   72  80 	//%
+fontchar 268 0   63  80 	//&
+fontchar 331 0   32  80 	//'
+fontchar 363 0   37  80 	//(
+fontchar 400 0   37  80 	//)
+fontchar 437 0   44  80 	//*
+fontchar 481 0   57  80 	//+
+fontchar 538 0   34  80 	//,
+fontchar 572 0   37  80 	//-
+
+fontchar 0   80  26  80 	//.
+fontchar 26  80  37  80 	///
+fontchar 65  80  55  80 	//0
+fontchar 120 80  51  80 	//1
+fontchar 171 80  51  80 	//2
+fontchar 222 80  52  80 	//3
+fontchar 274 80  54  80 	//4
+fontchar 328 80  52  80 	//5
+fontchar 380 80  52  80 	//6
+fontchar 432 80  51  80 	//7
+fontchar 483 80  52  80 	//8
+fontchar 535 80  52  80 	//9
+fontchar 587 80  35  80 	//:
+
+fontchar 2   160 32  80 	//;
+fontchar 35  160 56  80 	//<
+fontchar 91  160 57  80 	//=
+fontchar 148 160 55  80 	//>
+fontchar 203 160 45  80 	//?
+fontchar 248 160 70  80 	//@
+fontchar 321 160 62  80 	//A
+fontchar 383 160 53  80 	//B
+fontchar 436 160 56  80 	//C
+fontchar 492 160 61  80 	//D
+
+fontchar 0   240 51  80 	//E
+fontchar 51  240 51  80 	//F
+fontchar 102 240 60  80 	//G
+fontchar 161 240 61  80 	//H
+fontchar 223 240 33  80 	//I
+fontchar 256 240 39  80 	//J
+fontchar 295 240 61  80 	//K
+fontchar 356 240 50  80 	//L
+fontchar 406 240 65  80 	//M
+fontchar 471 240 60  80 	//N
+fontchar 531 240 64  80 	//O
+
+fontchar 1   320 51  80 	//P
+fontchar 51  320 62  80 	//Q
+fontchar 113 320 55  80 	//R
+fontchar 168 320 50  80 	//S
+fontchar 218 320 56  80 	//T
+fontchar 274 320 55  80 	//U
+fontchar 329 320 62  80 	//V
+fontchar 391 320 78  80 	//W
+fontchar 469 320 59  80 	//X
+fontchar 528 320 59  80 	//Y
+fontchar 587 320 53  80 	//Z
+
+fontchar 0   400 43  80 	//[
+fontchar 43  400 37  80 	//\
+fontchar 80  400 43  80 	//]
+fontchar 126 400 58  80 	//^
+fontchar 186 400 47  80 	//_
+fontchar 233 400 35  80 	//`
+fontchar 276 400 52  80 	//a
+fontchar 328 400 56  80 	//b
+fontchar 384 400 47  80 	//c
+fontchar 431 400 54  80 	//d
+fontchar 485 400 53  80 	//e
+fontchar 538 400 42  80 	//f
+fontchar 580 400 51  80 	//g
+
+fontchar 0   480 56  80 	//h
+fontchar 56  480 31  80 	//i
+fontchar 87  480 36  80 	//j
+fontchar 123 480 56  80 	//k
+fontchar 179 480 30  80 	//l
+fontchar 209 480 75  80 	//m
+fontchar 284 480 54  80 	//n
+fontchar 338 480 55  80 	//o
+fontchar 393 480 54  80 	//p
+fontchar 447 480 55  80 	//q
+fontchar 502 480 43  80 	//r
+fontchar 545 480 46  80 	//s
+fontchar 591 480 43  80 	//t
+
+fontchar 0   560 55  80 	//u
+fontchar 55  560 58  80 	//v
+fontchar 113 560 69  80 	//w
+fontchar 182 560 57  80 	//x
+fontchar 239 560 55  80 	//y
+fontchar 294 560 49  80 	//z
+fontchar 349 560 48  80 	//{
+fontchar 407 560 29  80 	//|
+fontchar 445 560 48  80 	//}
+fontchar 503 560 58  80 	//~
+
+
+//font default "packages/misc/chars.png" 32 64 0 2 0 -2
+font original "packages/misc/chars.png" 32 64 0 2 0 -2
 fontchar 0   0   25  64 	//!
 fontchar 25  0   29  64 	//"
 fontchar 54  0   53  64 	//#
