--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -2896,6 +2896,12 @@ docargument [H] [height] [] [0];
 
 
 
+docident [setfont] [Changes the current font.];
+
+docargument [N] [Font name] [name of the font] [0];
+
+
+
 docident [shadowcasters] [];
 
 docargument [V] [] [min 1/max 0/default 0];
