--- a/ac/packages/maps/official/ac_ingress.cfg
+++ b/ac/packages/maps/official/ac_ingress.cfg
@@ -16,7 +16,7 @@
 //  * No Derivative Works:	You may not alter, transform, or build upon this work.
 
 // However, attribution is not needed if distributed as part of the AssaultCube package, as credit is already given.
-// Exceptions to this license may be made if written permission is given by myself.
+// Exceptions to this license may be made if written permission is given by ourselves.
 
 mapmodelreset
 mapmodel 2 2 0 0 "nothing"
