ac_ingress finished
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5372 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -13,6 +13,7 @@ securemap ac_desert3
 securemap ac_elevation
 securemap ac_gothic
 securemap ac_iceroad
+securemap ac_ingress
 securemap ac_keller
 securemap ac_mines
 securemap ac_outpost
