--- a/ac/packages/maps/official/ac_ingress.cfg
+++ b/ac/packages/maps/official/ac_ingress.cfg
@@ -19,6 +19,7 @@
 // Exceptions to this license may be made if written permission is given by ourselves.
 
 mapmodelreset
+shadowyaw 305
 mapmodel 2 2 0 0 "nothing"
 mapmodel 4 1 0 0 "comp_bridge"
 mapmodel 0 7 0 0 "ladder_7x"
@@ -32,7 +33,7 @@ mapmodel 3 2 0 0 "bench"
 mapmodel 2 4 0 0 "dumpster"
 mapmodel 0 0 0 0 "roadblock01"
 mapmodel 0 0 0 0 "roadblock02"
-mapmodel 1 8 0 0 "fence"
+mapmodel 0 0 0 0 "fence"
 mapmodel 1 8 0 0 "fencepost"
 mapmodel 0 0 0 0 "fencegate_open"
 mapmodel 1 8 0 0 "fencegate_closed"
@@ -152,6 +153,10 @@ mapmodel 4 1 15 0 "toca/guardtower"
 mapmodel 1 2 0 0 "toca/treetrunk1"
 mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/handrail"
 mapmodel 0 0 0 0 "toca/stairs_aqueous/stairsacc/beam"
+mapmodel 0 0 0 0 "wires/3x8"
+mapmodel 0 0 0 0 "wires/2x8"	
+mapmodel 0 0 0 0 "wires/4x8a"	
+mapmodel 0 0 0 0 "wires/4x8"
 fog 800
 loadsky "textures/skymaps/socksky/grave"
 loadnotexture			
