--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -2616,15 +2616,15 @@ docargument [] [bits per pixel] [min 0/max 32/default 0];
 
 
 
-docident [dbghbox] [];
-
-docargument [V] [] [min 0/max 1/default 0];
-
-
-
 docident [dbgmbatch] [];
 
 docargument [V] [] [min 0/max 1/default 0];
+
+
+
+docident [dbgpos] [Displays local player's current z,y,z position in map, showstats 1 must be enabled.];
+
+docargument [V] [display current position] [min 0/max 1/default 0];
 
 
 
