--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -2622,7 +2622,7 @@ docargument [V] [] [min 0/max 1/default 0];
 
 
 
-docident [dbgpos] [Displays local player's current z,y,z position in map, showstats 1 must be enabled.];
+docident [dbgpos] [Displays local player's current x,y,z position in map, showstats 1 must be enabled.];
 
 docargument [V] [display current position] [min 0/max 1/default 0];
 
