--- a/ac/config/font.cfg
+++ b/ac/config/font.cfg
@@ -1,112 +1,104 @@
-//font alx "packages/misc/ALX_chars.png" 32 80 0 2 0 -2
-font default "packages/misc/ALX_chars.png" 32 80 0 2 0 -2   //test font
-//font      name, tex, defaultw, defaulth, offsetx, offsety, offsetw, offseth
-//fontchar  x y w h
-fontchar 0   0   32  80 	//!
-fontchar 33  0   50  80 	//"
-fontchar 83  0   62  80 	//#
-fontchar 145 0   51  80 	//$
-fontchar 196 0   72  80 	//%
-fontchar 268 0   63  80 	//&
-fontchar 331 0   32  80 	//'
-fontchar 363 0   37  80 	//(
-fontchar 400 0   37  80 	//)
-fontchar 437 0   44  80 	//*
-fontchar 481 0   57  80 	//+
-fontchar 538 0   34  80 	//,
-fontchar 572 0   37  80 	//-
+//font      font_name, texture_file, default_width, default_height, offset_x, offset_y, offset_width, offset_height
+//fontchar  x y width height (x,y coords = top left corner of character position)
+//use "/setfont font_name" to switch between fonts
 
-fontchar 0   80  26  80 	//.
-fontchar 26  80  37  80 	///
-fontchar 65  80  55  80 	//0
-fontchar 120 80  51  80 	//1
-fontchar 171 80  51  80 	//2
-fontchar 222 80  52  80 	//3
-fontchar 274 80  54  80 	//4
-fontchar 328 80  52  80 	//5
-fontchar 380 80  52  80 	//6
-fontchar 432 80  51  80 	//7
-fontchar 483 80  52  80 	//8
-fontchar 535 80  52  80 	//9
-fontchar 587 80  35  80 	//:
+font default "packages/misc/ALX_chars.png" 32 64 0 2 0 -2
+fontchar 1   0   23  64 	//!
+fontchar 28  0   38  64 	//"
+fontchar 68  0   47  64 	//#
+fontchar 118 0   39  64 	//$
+fontchar 157 0   59  64 	//%
+fontchar 216 0   50  64 	//&
+fontchar 266 0   24  64 	//'
+fontchar 293 0   28  64 	//(
+fontchar 323 0   28  64 	//)
+fontchar 352 0   36  64 	//*
+fontchar 390 0   43  64 	//+
+fontchar 436 0   26  64 	//,
+fontchar 463 0   30  64 	//-
+fontchar 1   64  23  64 	//.
+fontchar 25  64  32  64 	///
+fontchar 57  64  42  64 	//0
+fontchar 102 64  38  64 	//1
+fontchar 143 64  38  64 	//2
+fontchar 184 64  40  64 	//3
+fontchar 224 64  42  64 	//4
+fontchar 267 64  40  64 	//5
+fontchar 309 64  41  64 	//6
+fontchar 350 64  40  64 	//7
+fontchar 392 64  41  64 	//8
+fontchar 433 64  41  64 	//9
+fontchar 477 64  23  64 	//:
+fontchar 1   128 25  64 	//;
+fontchar 27  128 43  64 	//<
+fontchar 73  128 43  64 	//=
+fontchar 118 128 43  64 	//>
+fontchar 161 128 37  64 	//?
+fontchar 198 128 55  64 	//@
+fontchar 255 128 50  64 	//A
+fontchar 305 128 42  64 	//B
+fontchar 348 128 43  64 	//C
+fontchar 393 128 47  64 	//D
+fontchar 2   192 38  64 	//E
+fontchar 43  192 38  64 	//F
+fontchar 82  192 47  64 	//G
+fontchar 132 192 45  64 	//H
+fontchar 180 192 24  64 	//I
+fontchar 205 192 31  64 	//J
+fontchar 237 192 48  64 	//K
+fontchar 286 192 38  64 	//L
+fontchar 324 192 53  64 	//M
+fontchar 379 192 45  64 	//N
+fontchar 426 192 50  64 	//O
+fontchar 2   256 42  64 	//P
+fontchar 45  256 50  64 	//Q
+fontchar 97  256 45  64 	//R
+fontchar 143 256 41  64 	//S
+fontchar 184 256 46  64 	//T
+fontchar 230 256 44  64 	//U
+fontchar 275 256 50  64 	//V
+fontchar 326 256 64  64 	//W
+fontchar 392 256 48  64 	//X
+fontchar 440 256 49  64 	//Y
+fontchar 2   320 43  64 	//Z
+fontchar 46  320 29  64 	//[
+fontchar 77  320 32  64 	//\
+fontchar 109 320 29  64 	//]
+fontchar 141 320 46  64 	//^
+fontchar 189 320 37  64 	//_
+fontchar 226 320 28  64 	//`
+fontchar 259 320 40  64 	//a
+fontchar 302 320 41  64 	//b
+fontchar 344 320 36  64 	//c
+fontchar 382 320 41  64 	//d
+fontchar 426 320 41  64 	//e
+fontchar 468 320 33  64 	//f
+fontchar 2   384 41  64 	//g
+fontchar 45  384 40  64 	//h
+fontchar 87  384 23  64 	//i
+fontchar 110 384 27  64 	//j
+fontchar 141 384 42  64 	//k
+fontchar 183 384 23  64 	//l
+fontchar 210 384 56  64 	//m
+fontchar 270 384 40  64 	//n
+fontchar 311 384 42  64 	//o
+fontchar 356 384 41  64 	//p
+fontchar 398 384 41  64 	//q
+fontchar 439 384 32  64 	//r
+fontchar 471 384 37  64 	//s
+fontchar 2   448 35  64 	//t
+fontchar 42  448 39  64 	//u
+fontchar 85  448 44  64 	//v
+fontchar 130 448 55  64 	//w
+fontchar 187 448 42  64 	//x
+fontchar 230 448 44  64 	//y
+fontchar 276 448 37  64 	//z
+fontchar 320 448 35  64 	//{
+fontchar 366 448 20  64 	//|
+fontchar 397 448 35  64 	//}
+fontchar 443 448 43  64 	//~
 
-fontchar 2   160 32  80 	//;
-fontchar 35  160 56  80 	//<
-fontchar 91  160 57  80 	//=
-fontchar 148 160 55  80 	//>
-fontchar 203 160 45  80 	//?
-fontchar 248 160 70  80 	//@
-fontchar 321 160 62  80 	//A
-fontchar 383 160 53  80 	//B
-fontchar 436 160 56  80 	//C
-fontchar 492 160 61  80 	//D
-
-fontchar 0   240 51  80 	//E
-fontchar 51  240 51  80 	//F
-fontchar 102 240 60  80 	//G
-fontchar 161 240 61  80 	//H
-fontchar 223 240 33  80 	//I
-fontchar 256 240 39  80 	//J
-fontchar 295 240 61  80 	//K
-fontchar 356 240 50  80 	//L
-fontchar 406 240 65  80 	//M
-fontchar 471 240 60  80 	//N
-fontchar 531 240 64  80 	//O
-
-fontchar 1   320 51  80 	//P
-fontchar 51  320 62  80 	//Q
-fontchar 113 320 55  80 	//R
-fontchar 168 320 50  80 	//S
-fontchar 218 320 56  80 	//T
-fontchar 274 320 55  80 	//U
-fontchar 329 320 62  80 	//V
-fontchar 391 320 78  80 	//W
-fontchar 469 320 59  80 	//X
-fontchar 528 320 59  80 	//Y
-fontchar 587 320 53  80 	//Z
-
-fontchar 0   400 43  80 	//[
-fontchar 43  400 37  80 	//\
-fontchar 80  400 43  80 	//]
-fontchar 126 400 58  80 	//^
-fontchar 186 400 47  80 	//_
-fontchar 233 400 35  80 	//`
-fontchar 276 400 52  80 	//a
-fontchar 328 400 56  80 	//b
-fontchar 384 400 47  80 	//c
-fontchar 431 400 54  80 	//d
-fontchar 485 400 53  80 	//e
-fontchar 538 400 42  80 	//f
-fontchar 580 400 51  80 	//g
-
-fontchar 0   480 56  80 	//h
-fontchar 56  480 31  80 	//i
-fontchar 87  480 36  80 	//j
-fontchar 123 480 56  80 	//k
-fontchar 179 480 30  80 	//l
-fontchar 209 480 75  80 	//m
-fontchar 284 480 54  80 	//n
-fontchar 338 480 55  80 	//o
-fontchar 393 480 54  80 	//p
-fontchar 447 480 55  80 	//q
-fontchar 502 480 43  80 	//r
-fontchar 545 480 46  80 	//s
-fontchar 591 480 43  80 	//t
-
-fontchar 0   560 55  80 	//u
-fontchar 55  560 58  80 	//v
-fontchar 113 560 69  80 	//w
-fontchar 182 560 57  80 	//x
-fontchar 239 560 55  80 	//y
-fontchar 294 560 49  80 	//z
-fontchar 349 560 48  80 	//{
-fontchar 407 560 29  80 	//|
-fontchar 445 560 48  80 	//}
-fontchar 503 560 58  80 	//~
-
-
-//font default "packages/misc/chars.png" 32 64 0 2 0 -2
-font original "packages/misc/chars.png" 32 64 0 2 0 -2
+font v104 "packages/misc/chars.png" 32 64 0 2 0 -2
 fontchar 0   0   25  64 	//!
 fontchar 25  0   29  64 	//"
 fontchar 54  0   53  64 	//#
