--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -17,7 +17,7 @@ newmenu "In-game"
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1" [__ingamemenu_showmodel "In-game" 0]
 menuitem "Change weapon..."        	"showmenu Weapons"  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Change to the enemy team"	"changeteam" [__ingamemenu_showmodel "In-game" 1]
-menuitem "Change to spectate mode"      "gospectate" [__ingamemenu_showmodel "In-game" 1]
+menuitem "Change to spectate mode"      "spectate" [__ingamemenu_showmodel "In-game" 1]
 menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]  [__ingamemenu_showmodel "In-game" 1]
 menuitem "" -1  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Set mode/map..."		"showmenu Gamemode"
