--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -80,8 +80,8 @@ alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset
 // "changeteam" command.
 alias changeteam [ if (< (curteam) 4) [ team (at "RVSF CLA RVSF-SPECT CLA-SPECT" (curteam)) ] ]
 
-// "gospectate" command
-alias gospectate [ suicide; sleep 500 [ team SPECTATOR ] ]
+// "spectate" command
+alias spectate [ suicide; sleep 500 [ team SPECTATOR ] ]
 
 // Mode/map-setting aliases.
 alias votemap [ mode $arg1; map $arg2 ]
