--- a/ac/config/creditmenu.cfg
+++ b/ac/config/creditmenu.cfg
@@ -34,7 +34,7 @@ menuitem "              textures." -1
 menuitem "> Halo        ac_arctic." -1
 menuitem "> Jiba        ac_arabian." -1
 menuitem "> MitaMAN     ac_depot, &" -1
-menutiem "              plus textures." -1
+menuitem "              plus textures." -1
 menuitem "> Mr.Floppy   ac_keller, ac_werk, &" -1
 menuitem "              textures and models." -1
 menuitem "> Nieb        ac_desert2, ac_desert3, &" -1
