--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -54,6 +54,7 @@ entcomplete newent
 entcomplete clearents
 entcomplete closestenttype
 
+// TODO:FIXME change all occurrence of SPECT(ator) to GHOST
 listcomplete team "CLA RVSF CLA-SPECT RVSF-SPECT SPECTATOR"
 
 // Game mode descriptions...
