forgotten docs change and forgotten credits
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5428 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/creditmenu.cfg
+++ b/ac/config/creditmenu.cfg
@@ -56,13 +56,15 @@ menuitem "> absinth   &" -1
 menuitem "     WahnFred     Packaging AssaultCube for Mac." -1
 menuitem "> Arghvark        Previous project leader, game concept, code." -1
 menuitem "> Chris Robinson  OpenAL-Soft advice." -1
+menuitem "> connex          Endless hours of anticheat testing." -1
 menuitem "> dtd             Hosting." -1
 menuitem "> Grenadier ==" -1
 menuitem "        aurhat    Small code contributions/fixes." -1
+menuitem "> KanslozeClown   Code contributions, advice and long time supporting." -1
+menuitem "> Kirin           Code contributions and fixes, client stuff, advice" -1
 menuitem "> Rick Helmus     Bot code." -1
 menuitem "> stef            Bug fixes, additional code, server stuff, new modes." -1
 menuitem "> Verbal_         Q&A, advisor, lead tester, pro-coffee service." -1
-menuitem "> KanslozeClown   Code contributions and advice." -1
 loop e 17 [ menuitem "" -1 ]
 menuitem "   ---- [ VVV ] ---------------                                   PAGE DOWN.." -1
 menuitem "                               ---- [ ^^^ ] ---------------       ..PAGE UP.." -1
