--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -491,7 +491,9 @@ docident [skin_cla] [Choose skin when playing for team CLA.];
 docargument [N] [skin id] [] [0];
 docident [skin_rvsf] [Choose skin when playing for team RVSF.];
 docargument [N] [skin id] [] [0];
-docident [spectatemode] [Toggle into spectator mode - only possible when you're dead!];
+docident [spectatemode] [Toggle into spectator mode - only possible when you're dead! (if unsure, do not use this)];
+
+docargument [N] [the spectator number] [mode id] [0];
 dockey [SPACE] [] [switch spectator mode];
 dockey [MOUSE4] [] [next player];
 dockey [MOUSE5] [] [previous player];
